<resources>
    <string name="app_name">XYProject</string>
    <string name="activate">激活</string>
    <string name="device_init_fail">设备列表初始化失败</string>
    <string name="opendoor_success">开门成功</string>
    <string name="opendoor_fail">开门失败</string>
    <string name="frequent_operation_try_agin_later">操作太频繁，请稍后再试！</string>
    <string name="hint">提示</string>
    <string name="content">内容&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="confirm_dialing">确认呼叫</string>
    <string name="dialing">呼叫</string>
    <string name="remote_opendoor">远程开门</string>
    <string name="defence_title">智安管家</string>
    <string name="video_title">视频查看</string>
    <string name="defence_success">设防成功</string>
    <string name="defence_fail">设防失败</string>
    <string name="shark_door">摇一摇开门</string>
    <string name="immediately_quit">立即退出</string>
    <string name="later">稍后再说</string>
    <string name="hot_hint">温馨提示</string>
    <string name="count_quit">3秒后退出摇一摇</string>
    <string name="isFingerSetting">检测到您尚未设置指纹密码，请点击确认前往设置页面设置</string>
    <string name="undefence_success">撤防成功</string>
    <string name="undefence_fail">撤防失败</string>
    <string name="finish">完&#160;&#160;&#160;&#160;成</string>
    <string name="email_confirm">立即验证</string>
    <string name="my_application">我的应用</string>
    <string name="all_application">全部应用</string>
    <string name="all">全部</string>
    <string-array name="homeTabList">
        <item>安防</item>
        <item>商城</item>
        <item>社区</item>
        <item>我的</item>
    </string-array>
    <string-array name="deviceTypeName">
        <item>(一代设备)</item>
        <item>(二代设备)</item>
        <item>(单元门禁)</item>
        <item>(其他)</item>
    </string-array>
    <string name="opendoor_remote">远程开门</string>
    <string name="one_key_call">一键呼叫</string>
    <string name="defence_status">设防状态</string>
    <string name="home_management">家居管理</string>
    <string name="emergency_number_setting">紧急号码设置</string>
    <string name="hint_management">提示管理</string>
    <string name="record">记录查看</string>
    <string name="record_">记录</string>
    <string name="user_management">用户管理</string>
    <string name="opendoor_by_card">刷卡开门</string>
    <string name="opendoor_by_fingerprint">指纹开门</string>
    <string name="opendoor_by_fingerprint_and_card">指纹刷卡组合开门</string>
    <string name="opendoor_by_fingerprint_or_card">指纹或刷卡开门</string>
    <string name="forbid_all">全部禁止</string>
    <string name="opendoor_way">开门方式</string>
    <string name="modify_opendoorway_success">修改开门方式成功</string>
    <string name="modify_opendoorway_fail">修改开门方式失败</string>
    <string name="card_management">门禁卡管理</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="fingerprint_management">指纹管理</string>
    <string name="check_net">请检查网络</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_remark">请输入备注</string>
    <string name="username">用户名</string>
    <string name="type">类型&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="remark">备注</string>
    <string name="default_sign">默认签名</string>
    <string name="add_card">添加门禁卡</string>
    <string name="modify_card_remark">修改门禁卡备注</string>
    <string name="start_input_card">开始录入门禁卡</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="add_fingerprint">添加指纹</string>
    <string name="modify_fingerprint_remark">修改指纹备注</string>
    <string name="start_input_fingerprint">开始录入指纹</string>
    <string name="auth_user_list">用户列表</string>
    <string name="granting_authority">授予权限</string>
    <string name="open_door_right">开门权限</string>
    <string name="historical_records">历史记录</string>
    <string name="doorbell_hint">门铃提示</string>
    <string name="opendoor_hint">开门提示</string>
    <string name="disassembly_alarm">拆卸报警</string>
    <string name="door_alarm">入侵报警</string>
    <string name="low_power_tips">低电量提示</string>
    <string name="author_hint">提示:赋予开门权限即可拥有视频监控权限。</string>
    <string name="add_auth_user">新增用户</string>
    <string name="modify_auth_user">修改用户</string>
    <string name="second">秒</string>
    <string name="time_setting_hint">门锁检测自动闭合：\n当您用手机或其他方式打开门锁而没有提没锁把手进行开门时，在您设置的时间点里，门锁将再次自动关闭，以保证家里安全</string>
    <string name="time_setting">时间设置</string>
    <string name="doorbell_volume">门铃音量:</string>
    <string name="doorbell_choice">门铃选择</string>
    <string name="doorbell_setting">门铃设置</string>
    <string name="modify_doornick">修改门禁</string>
    <string name="go_setting">前往设置</string>
    <string-array name="communityArray">
        <item>物业公告</item>
        <item>社区交流</item>
        <item>物业报修</item>
        <item>房屋出租</item>
        <item>物品转让</item>
        <item>更多</item>
    </string-array>
    <string name="property_announcement">物业公告</string>
    <string name="detail">详情</string>
    <string name="rent">出租</string>
    <string name="neighbor_conversation">邻里交流</string>
    <string name="issue">发布</string>
    <string name="say_sth">说点什么吧...</string>
    <string name="please_choose_date">请选择时间</string>
    <string name="address">地址</string>
    <string name="input_address">请输入地址</string>
    <string name="who_can_scan">谁能看见</string>
    <string name="send_trends">发状态</string>
    <string name="send_activity">发活动</string>
    <string name="for_everbody">所有人可见</string>
    <string name="for_follow">关注的人可见</string>
    <string name="for_community">社区可见</string>
    <string name="commment_success">评论成功</string>
    <string name="evaluate_success">评价成功</string>
    <string name="zan_success">点赞成功</string>
    <string name="cancel_zan_success">取消赞成功</string>
    <string name="sb_zan">等人觉得赞</string>
    <string name="scan">浏览</string>
    <string name="times">次</string>
    <string name="property_repair">物业报修</string>
    <string name="repair_record">报修记录</string>
    <string name="common_repair">公共报修</string>
    <string name="personal_repair">个人报修</string>
    <string name="common_repair_hint">请您监督小区公共区域设施设备的运行情况，发现问题请立即告诉我们</string>
    <string name="personal_repair_hint">您的专属维修专家，为您的爱家提供贴心的服务</string>
    <string name="repair_detail_description">请具体说明需要报修的物品及地点...</string>
    <string name="repair_detail">报修详情</string>
    <string name="issue_commmunity">发布社区</string>
    <string name="success">操作成功</string>
    <string name="choose_community">选择社区</string>
    <string name="follow_plus">+关注</string>
    <string name="followed">已关注</string>
    <string name="evaluate">评价</string>
    <string name="follow_success">关注成功</string>
    <string name="cancel_follow">已取消关注</string>
    <string name="fans_num">粉丝:</string>
    <string name="follow_num">关注:</string>
    <string name="sign_zh">￥</string>
    <string name="yuan_per_month">元/月</string>
    <string name="rent_room">房屋出租</string>
    <string name="contact_by_phone">电话联系</string>
    <string name="room_title">房屋标题</string>
    <string name="input_room_title">请输入房屋标题</string>
    <string name="room_area">所属小区</string>
    <string name="input_room_area">请输入所在小区</string>
    <string name="room_location">房屋位置</string>
    <string name="input_room_location">请输入房屋具体位置</string>
    <string name="room_price">房屋价格</string>
    <string name="input_room_price">请输入房屋出租价格</string>
    <string name="mobile">联系电话</string>
    <string name="input_mobile">请输入您的联系方式</string>
    <string name="description">&#160;&#160;描&#160;&#160;&#160;&#160;述&#160;&#160;</string>
    <string name="input_description">请输入描述（例:几居室、普装、加点等）</string>
    <string name="i_wanna_rend">我要出租</string>
    <string name="input_account">请输入用户名或者手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登 录</string>
    <string name="quit">退出当前账号</string>
    <string name="phone_num">手机号</string>
    <string name="send_target">发送目标</string>
    <string name="complain">投诉</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_doorname">请输入门禁名</string>
    <string name="hint_phonenum">请输入手机号</string>
    <string name="hint_choice_company">请选择您要发送的企业</string>
    <string name="password">密 码</string>
    <string name="common_equipment">常用设备</string>
    <string name="safe_set">安全设置</string>
    <string name="font_size">字体大小</string>
    <string name="suggestion">意见建议</string>
    <string name="only_suggestion">建议</string>
    <string name="about_us">关于我们</string>
    <string name="merise">米睿智能门禁</string>
    <string name="regist">注册</string>
    <string name="emergency_name">紧急拨号</string>
    <string name="finger_code_hint">请放置手指</string>
    <string name="input_emergency_num">请输入紧急呼叫号码(座机需加区号)</string>
    <string name="my">我  的</string>
    <string name="hint_emergency_remark">请输入备注</string>
    <string name="emergency_title">紧急号码设置</string>
    <string name="record_opendoor">开门记录</string>
    <string name="record_doorbell">门铃记录</string>
    <string name="record_police">报警记录</string>
    <string name="record_check">记录查看</string>
    <string name="record_check_detail">记录详情</string>
    <string name="gesture_code">手势密码</string>
    <string name="finger_code">指纹密码(您可以使用系统解锁指纹登录)</string>
    <string name="change_finger_code">新增修改指纹密码</string>
    <string name="change_code">修改密码</string>
    <string name="change_phone">修改手机号</string>
    <string name="perfect_info">完善资料</string>
    <string name="prompt_manage">提示管理</string>
    <string name="code_management">安全设置</string>
    <string name="perfect_data">完善资料</string>
    <string name="perfect_set_username">用户名设置</string>
    <string name="perfect_set_email">邮箱设置</string>
    <string name="company_introduction">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020重庆米睿科技有限公司是一家专注于物联网、云计算领域、集计算机软硬件研发为一体，专注提供智能家居、智能楼宇、智能社区等产品与整体解决方案的高科技企业，是国内领先的云计算产品与服务提供商，也是西部最大的第三代智能家居制造商。\n公司地址：重庆市渝北区黄山大道中段55号附2号麒麟D座两江幸福广场旁。\n联系电话：023-63421666</string>
    <string name="introduction">公司简介</string>
    <string name="agreement">服务协议</string>
    <string name="perfect_username_hint">*用户名作为登录账号且只可修改一次</string>
    <string name="can_not_change">无法修改用户名</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="update_password">修改密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_username">请输入新用户名</string>
    <string name="input_new_email">请输入邮箱</string>
    <string name="new_password">新密码</string>
    <string name="input_phone">请输入手机号(手机号即为登录帐号)</string>
    <string name="input_validatecode">请输入验证码</string>
    <string name="content_detail">请输入您要建议或投诉的内容</string>
    <string name="validatecode">验证码</string>
    <string name="doorname">门禁名</string>
    <string name="next">下一步</string>
    <string name="accept_the_agreement">接受协议</string>
    <string name="regist_hint">温馨提示:请牢记以上注册信息，便于以后找回密码。</string>
    <string name="getvalidatecode">获取验证码</string>
    <string name="update_mobile_hint">*修改后的手机号即为登录帐号</string>
    <string name="activation_code_hint">激活码为家庭管理员使用，且每套门禁系统只有且只有一个激活码，并只能激活一次，附于门禁系统说明书内。请仔细填写！</string>
    <string name="update_door_hint">如果您一套房产拥有多套门禁系统，可对不同的门禁进行名称设置："前门"、"后门"，以方便您进行管理，如果没有可不必设置</string>
    <string name="activate_code">激活码</string>
    <string name="input_activate_code">请输入激活码</string>
    <string name="email">邮箱</string>
    <string name="email_hint">*邮箱可以作为登录账号</string>
</resources>