<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainItemsBgColor"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/topTitle"
        layout="@layout/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <RadioGroup
        android:layout_marginTop="@dimen/margin_20"
        android:layout_below="@id/topTitle"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="">

        <RadioButton
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_expand_item_height"
            android:background="@drawable/item_click_bg_selector"
            android:button="@null"
            android:checked="true"
            android:drawableRight="@drawable/who_can_scan_selector"
            android:paddingLeft="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:text="@string/for_everbody"
            android:textColor="@drawable/textview_click_bg_selector" />

        <include
            layout="@layout/layout_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1px"></include>

        <RadioButton
            android:id="@+id/follow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_expand_item_height"
            android:background="@drawable/item_click_bg_selector"
            android:button="@null"
            android:drawableRight="@drawable/who_can_scan_selector"
            android:paddingLeft="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:text="@string/for_follow"
            android:textColor="@drawable/textview_click_bg_selector" />

        <include
            layout="@layout/layout_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1px"></include>

        <RadioButton
            android:id="@+id/community"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_expand_item_height"
            android:background="@drawable/item_click_bg_selector"
            android:button="@null"
            android:drawableRight="@drawable/who_can_scan_selector"
            android:paddingLeft="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:text="@string/for_community"
            android:textColor="@drawable/textview_click_bg_selector" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:gravity="center">

        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/wide_btn_bg_selector"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="@dimen/size_sp_20" />
    </LinearLayout>
</RelativeLayout>